# voice_agent

./: livekit_agent_server.py  main.py  pyproject.toml  stt.py
backend/: livekit_routes.py  main.py  stt_vosk.py  tts_elevenlabs.py
backend/agentss/: triage_agent.py
frontline-ui/: index.html  package-lock.json  package.json
frontline-ui/src/: App.jsx
frontline-ui/src/components/: VoiceCallUI.jsx
frontline_agents/: frontline_agents.py  lifecycle.py  triage_agent.py
vosk-model-small-en-us-0.15/: desktop.ini
